<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/toppings"
            android:layout_marginBottom="16dp"/>

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhippedCream"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_topping"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/quantity"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/increment"
            android:onClick="increment"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text_view"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:padding="16dp"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/decrement"
            android:onClick="decrement"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_summary_text_view"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/before_order"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="submitOrder"/>
</LinearLayout>
</ScrollView>